# fireside

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  COMMERCIALIZATION.md  FEATURE_INVENTORY.md  HANDOFF.md  MESH.md  README.md  SECURITY.md  THOR_SPRINT1_WALKTHROUGH.md  VISION.md  WHITEPAPER.md  bifrost.py  bifrost_err.txt  bifrost_local.freya.py  bifrost_local.py  commands.json  config.freya.json  config.json  config_loader.py  dashboard_audit.md  design_preview.html  dream_journal.jsonl  install.ps1  install.sh  install_bifrost.ps1  mesh.html  mesh_discovery.py  orchestrator.py  pending.json  pipeline_templates.py  plugin_loader.py  prompt_assembler.py  proposals.json  requirements.txt  save_point_state.json  tauri_log.txt  tauri_log2.txt  tool_defs.py  (+2 more)
.agents/: IDENTITY.md
api/: __init__.py  v1.py
bot/: .gitignore  FREYA_TOPOLOGY.md  HEIMDALL_TOPOLOGY.md  MESH.md  PIPELINE_ARCHITECTURE.md  THOR_TOPOLOGY.md  bifrost.py  bifrost_local.py  brain_manager.py  circuit_breaker.py  commands.json  commands_heimdall.json  config.freya.json  config.heimdall.json  config.json  config.odintheestrator.json  config.thor.json  daily_brief.py  dashboard.html  dispatcher.py  event_log.py  forensic_audit.py  guild_hall.html  hooks.json  hydra.py  inference_cache.py  install_bifrost.ps1  install_bifrost_macos.sh  ls_output.py  memory_integrity.py  memory_sync.py  metrics.py  pending.json  perf_metrics.py  (+22 more)
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: main.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
(+670 files in other folders)
