[package]
name = "fireside"
version = "1.0.0"
description = "Fireside Desktop — your AI at home"
authors = ["FableFur"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
